--- a/sistema_login/src/main/resources/templates/login.html
+++ b/sistema_login/src/main/resources/templates/login.html
@@ -13,8 +13,8 @@
 
             body{
                 width: 100%;
-                height: 900px;
-                background: rgb(255, 227, 248);
+                height: 600px;
+                background: rgba(181, 180, 194, 0.705);
             }
 
             .cabecario{
@@ -23,8 +23,7 @@
                 text-align: center;
                 margin: 3% 0;
                 font-size: 2em;
-                color: rgb(71, 24, 24);
-                text-decoration: underline dashed;
+                color: rgb(0, 0, 0);
             }
 
             form{
@@ -37,53 +36,52 @@
             label{
                 font-size: 20px;
                 font-weight: bold;
-                color: rgb(71, 24, 24);
+                color: rgb(0, 0, 0);
+            }
+            .corpo{
+                text-align: center;
             }
             .row {
-                width: 100%;
                 display: flex;
-                align-content: space-around;
-                justify-content: center;
                 margin: auto;
             }
             .coluna_1{
-                width: 20%;
+                width: 30%;
                 position: relative;
                 align-self: center;
                 text-align: right;
-                left: 2.5%;
+                left: 7.5%;
             }
             .coluna_2{
                 width: 50%;
-                position: relative;
                 text-align: center;
+                position: relative;
                 right: 2.5%;
             }
             input{
-                width: 70%;
+                width: 50%;
                 height: 60%;
                 font-size: 17px;
                 color: rgb(71, 24, 24);
                 font-weight: bold;
-                border-radius: 10px;
-                border: 4px dotted rgb(71, 24, 24);
-                background: rgb(255, 227, 248);
-                margin: 2%;
+                border: 3px solid rgb(27, 27, 27);
+                background: rgb(255, 255, 255);
+                margin: 2% ;
                 padding: 0 2%;
                 
             }
             input::placeholder{
                 font-size: 17px;
-                color: rgb(71, 24, 24);
+                color: rgb(0, 0, 0);
                 font-weight: bold;
             }
 
             button{
                 width: 15%;
                 height: 30px;
-                border: 2px solid rgb(71, 24, 24);
-                background-color: rgb(255, 227, 248);
-                color: rgb(71, 24, 24);
+                border: 2px solid rgb(0, 0, 0);
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
                 font-size: 15px;
                 font-weight: bold;
                 margin: 2% 0;
@@ -91,9 +89,9 @@
                 align-items: center;
             }
             button:hover{
-                border: 2px solid rgb(255, 227, 248);
-                background-color: rgb(71, 24, 24);
-                color: rgb(255, 227, 248);
+                border: 2px solid rgb(255, 255, 255);
+                background-color: rgb(0, 0, 0);
+                color: rgb(255, 255, 255);
                 transition: 0.5s;
             }
             footer{
@@ -105,7 +103,7 @@
             .referencia {
                 padding:60% 0 0;
                 font-size: 15px;
-                color: rgb(71, 24, 24);
+                color: rgb(0, 0, 0);
                 font-weight: bold;
                 text-decoration: underline;
                 text-align: center;
