--- a/sistema_login/src/main/resources/templates/usuarios.html
+++ b/sistema_login/src/main/resources/templates/usuarios.html
@@ -6,15 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Envio Email</title>
         <style>
-            *{
+             *{
                 margin: 0;
                 padding: 0%;
             }
 
             body{
                 width: 100%;
-                height: 1200px;
-                background: rgb(255, 227, 248);
+                height: 600px;
+                background: rgba(181, 180, 194, 0.705);
             }
 
             .cabecario{
@@ -23,8 +23,7 @@
                 text-align: center;
                 margin: 3% 0;
                 font-size: 2em;
-                color: rgb(71, 24, 24);
-                text-decoration: underline dashed;
+                color: rgb(0, 0, 0);
             }
 
             form{
@@ -37,13 +36,14 @@
             label{
                 font-size: 20px;
                 font-weight: bold;
-                color: rgb(71, 24, 24);
+                color: rgb(0, 0, 0);
             }
+            .centro{
+                text-align: center;
+            }   
             .row {
-                width: 100%;
+                width: 80%;
                 display: flex;
-                align-content: space-around;
-                justify-content: center;
                 margin: auto;
             }
             .coluna_1{
@@ -56,34 +56,34 @@
             .coluna_2{
                 width: 50%;
                 position: relative;
+                align-self: center;
                 text-align: center;
-                right: 2.5%;
+                right: 7.5%;
             }
             input{
-                width: 70%;
+                width: 50%;
                 height: 60%;
                 font-size: 17px;
                 color: rgb(71, 24, 24);
                 font-weight: bold;
-                border-radius: 10px;
-                border: 4px dotted rgb(71, 24, 24);
-                background: rgb(255, 227, 248);
+                border: 3px solid rgb(27, 27, 27);
+                background: rgb(255, 255, 255);
                 margin: 2%;
                 padding: 0 2%;
                 
             }
             input::placeholder{
                 font-size: 17px;
-                color: rgb(71, 24, 24);
+                color: rgb(0, 0, 0);
                 font-weight: bold;
             }
 
             button{
                 width: 15%;
                 height: 30px;
-                border: 2px solid rgb(71, 24, 24);
-                background-color: rgb(255, 227, 248);
-                color: rgb(71, 24, 24);
+                border: 2px solid rgb(0, 0, 0);
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
                 font-size: 15px;
                 font-weight: bold;
                 margin: 2% 0;
@@ -91,21 +91,21 @@
                 align-items: center;
             }
             button:hover{
-                border: 2px solid rgb(255, 227, 248);
-                background-color: rgb(71, 24, 24);
-                color: rgb(255, 227, 248);
+                border: 2px solid rgb(255, 255, 255);
+                background-color: rgb(0, 0, 0);
+                color: rgb(255, 255, 255);
                 transition: 0.5s;
             }
             footer{
                 width: 100%;
-                height: 5%;
+                height: 2%;
                 padding-bottom: 0%;
                 
             }
             .referencia {
-                padding: 20% 0 0;
+                padding:60% 0 0;
                 font-size: 15px;
-                color: rgb(71, 24, 24);
+                color: rgb(0, 0, 0);
                 font-weight: bold;
                 text-decoration: underline;
                 text-align: center;
@@ -124,44 +124,46 @@
         </header>
         <main>
             <form action="/usuario/cadastrar" method="post" class="corpo">
-                <div class="row">
-                    <div class="coluna_1">
-                        <label for="cpf">CPF:</label>
+                <div class="centro">
+                    <div class="row">
+                        <div class="coluna_1">
+                            <label for="cpf">CPF:</label>
+                        </div>
+                        <div class="coluna_2">
+                            <input type="cpf" name="cpf" class="cpf" required placeholder="00000000000">
+                        </div>
                     </div>
-                    <div class="coluna_2">
-                        <input type="cpf" name="cpf" class="cpf" required placeholder="00000000000">
+                    <div class="row">
+                        <div class="coluna_1">
+                            <label for="nome">Nome Completo:</label>
+                        </div>
+                        <div class="coluna_2">
+                            <input type="nome" name="nome" class="nome" required placeholder="Ex: José Emmanuel">
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="coluna_1">
-                        <label for="nome">Nome Completo:</label>
+                    <div class="row">
+                        <div class="coluna_1">
+                            <label for="email" >Email:</label>
+                        </div>
+                        <div class="coluna_2">
+                            <input type="email" name="emailUsuario"  class="emailUsuario" required placeholder="email@email.com">
+                        </div>
                     </div>
-                    <div class="coluna_2">
-                        <input type="nome" name="nome" class="nome" required placeholder="Ex: José Emmanuel">
+                    <div class="row"> 
+                        <div class="coluna_1">
+                            <label for="senha">Senha:</label>
+                        </div>
+                        <div class="coluna_2">
+                            <input type="senha" name="senha" class="senha" required placeholder="xxxxxx">
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="coluna_1">
-                        <label for="email" >Email:</label>
-                    </div>
-                    <div class="coluna_2">
-                        <input type="email" name="emailUsuario"  class="emailUsuario" required placeholder="email@email.com">
-                    </div>
-                </div>
-                <div class="row"> 
-                    <div class="coluna_1">
-                        <label for="senha">Senha:</label>
-                    </div>
-                    <div class="coluna_2">
-                        <input type="senha" name="senha" class="senha" required placeholder="xxxxxx">
-                    </div>
-                </div>
-                <div class="row"> 
-                    <div class="coluna_1">
-                        <label for="confirmaSenha">Confirme a senha:</label>
-                    </div>
-                    <div class="coluna_2">
-                        <input type="confirmaSenha" name="confirmaSenha" class="confirmaSenha" required placeholder="xxxxxx">
+                    <div class="row"> 
+                        <div class="coluna_1">
+                            <label for="confirmaSenha">Confirme a senha:</label>
+                        </div>
+                        <div class="coluna_2">
+                            <input type="confirmaSenha" name="confirmaSenha" class="confirmaSenha" required placeholder="xxxxxx">
+                        </div>
                     </div>
                 </div>
                 <div class="button">
