mudança cor input

--- a/sistema_login/src/main/resources/templates/login.html
+++ b/sistema_login/src/main/resources/templates/login.html
@@ -62,7 +62,6 @@
                 width: 50%;
                 height: 60%;
                 font-size: 17px;
-                color: rgb(71, 24, 24);
                 font-weight: bold;
                 border: 3px solid rgb(27, 27, 27);
                 background: rgb(255, 255, 255);
@@ -72,7 +71,7 @@
             }
             input::placeholder{
                 font-size: 17px;
-                color: rgb(0, 0, 0);
+                color: rgba(0, 0, 0, 0.651);
                 font-weight: bold;
             }
 
